--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <div class="container-fluid nav-bar bg-transparent">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-1 px-1">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
-                    <div class="icon p-2 me-2">
+                    <div class="icon p-2 me-2" style="margin-left: 10px;">
                         <img class="img-fluid" src="img/icone-borges.png" alt="Icon" style="width: 30px; height: 30px;">
                     </div>
-                    <h1 class="m-0">Imobiliária Borges</h1>
+                    <h1 class="m-0" style="font-size: 22px;">Imobiliária Borges</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
